[package]
name = "septid"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Pure Rust implementation of the spiped protocol"
repository = "https://github.com/FauxFaux/septid"
readme = "README.md"

categories = ["cryptography", "network-programming"]
license = "MIT OR Apache-2.0"

edition = "2018"

[dependencies]
aes-ctr = "0.3"
async-std = "1"
crypto-mac = "0.7"
futures = "0.3"
log = "0.4"
sha2 = "0.8"
hmac = "0.7"
num-bigint = "0.2"
pin-utils = "0.1.0-alpha.4"
pin-project = "0.4"
rand = "0.7"
subtle = "2"
zeroize = "1"


# fiddled dependencies

[dependencies.failure]
# features -= failure_derive (big dependencies)
default-features = false
features = ["std"]
version = "0.1"

[dependencies.pbkdf2]
# features -= simple (big dependencies)
default-features = false
version = "0.3"


# cli deps

[dependencies.ctrlc]
optional = true
features = ["termination"]
version = "3"

[dependencies.getopts]
optional = true
version = "0.2"

[dependencies.pretty_env_logger]
optional = true
version = "0.3"


[dev-dependencies]
pretty_env_logger = "0.3"

[features]
default = ["cli"]
cli = ["ctrlc", "getopts", "pretty_env_logger"]


[[bin]]
name = "septid"
required-features = ["cli"]

[profile.release]
lto = true

[badges.travis-ci]
repository = "FauxFaux/septid"
