[package]
name = "septid"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Pure Rust implementation of the spiped protocol"
repository = "https://github.com/FauxFaux/septid"
readme = "README.md"

categories = ["cryptography", "network-programming"]
license = "MIT OR Apache-2.0"

edition = "2018"

[dependencies]
anyhow = "1.0"
aes-ctr = "0.6"
async-std = "1"
clap = { version = "4", features = ["derive", "cargo"] }
crypto-mac = "0.7"
futures = "0.3"
log = "0.4"
sha2 = "0.8"
hmac = "0.7"
num-bigint = "0.4"
pin-project = "1"
rand = "0.8"
subtle = "2"
zeroize = "1"


# fiddled dependencies

[dependencies.pbkdf2]
# features -= simple (big dependencies)
default-features = false
version = "0.3"


# cli deps

[dependencies.ctrlc]
optional = true
features = ["termination"]
version = "3"

[dependencies.getopts]
optional = true
version = "0.2"

[dependencies.pretty_env_logger]
optional = true
version = "0.5"


[dev-dependencies]
pretty_env_logger = "0.5"

[features]
default = ["cli"]
cli = ["ctrlc", "getopts", "pretty_env_logger"]


[[bin]]
name = "septid"
required-features = ["cli"]

[profile.release]
lto = true

[badges.travis-ci]
repository = "FauxFaux/septid"
